Fix horizontal scrollbar

--- a/user/themes/chroma-theme/css/application.css
+++ b/user/themes/chroma-theme/css/application.css
@@ -6024,7 +6024,7 @@ div.post-content img {
 .splash {
   display: table;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
 }
@@ -6209,7 +6209,7 @@ body:not(.home) article {
 .half-splash {
   display: table;
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
   overflow: hidden;
 }
